--- a/generators/app/templates/webpack.config.js.template
+++ b/generators/app/templates/webpack.config.js.template
@@ -50,6 +50,7 @@ const baseWebpack = {
     app: './src/app.js'
   },
   output: {
+    publicPath: '/',
     path: path.resolve(__dirname, 'dist'),
     filename: '[name].bundle.js'
   },
