--- a/generators/app/templates/src/app.js.template
+++ b/generators/app/templates/src/app.js.template
@@ -1,8 +1,5 @@
-import * as offline from 'offline-plugin/runtime';  
-import './app.styl';
-  
-offline.install({
-  onUpdateReady: function() {
-    offline.applyUpdate();
-  }
-});
+import * as offline from 'offline-plugin/runtime';
+import './app.scss';
+import './components/welcome/welcome.js';
+
+offline.install({ onUpdateReady: () => offline.applyUpdate() });
