--- a/generators/app/templates/src/index.pug.template
+++ b/generators/app/templates/src/index.pug.template
@@ -34,3 +34,4 @@ html(lang='en')
       gtag('js', new Date()); 
       gtag('config', '#{data.ga}');  
   body    
+    include components/welcome/welcome.pug
