Add generic text for readme

--- a/generators/app/templates/readme.md.template
+++ b/generators/app/templates/readme.md.template
@@ -15,23 +15,9 @@
 # install dependencies
 $ npm i
 
-# Run the project
+# run the project
 $ npm start
 ```
-
-With the commands above, you have everything to start.
-
-The `app.config.json` file has all minimal config to create your scaffolding.
-
-## About CSS
-
-### Stylus or Sass
-
-You can use Stylus or Sass as CSS preprocessor 😁
-
-### Post CSS libs
-
-For grid system uses [Autoprefixer](https://github.com/postcss/autoprefixer) to make easy use browser prefixes, [Lost](https://github.com/peterramsing/lost) with some help from, [Rucksack](http://simplaio.github.io/rucksack/) for animations, reset and a lot of great mixins, [Rupture](https://github.com/jenius/rupture) for responsive utilities. And [Font Magician](https://github.com/jonathantneal/postcss-font-magician/) to get the webfonts.
 
 ## Tasks
 
@@ -40,6 +26,10 @@ For grid system uses [Autoprefixer](https://github.com/postcss/autoprefixer) to 
 - `npm run lint`: lint javascript and css
 - `npm run fix`: command to fix all eslint errors
 - `npm run deploy`: run all tasks to build and deploy on gh-pages
+
+## Credit
+
+This project was generated using [Kratos Boilerplate](https://github.com/LFeh/kratos-boilerplate).
 
 ## License
 
