Add some informations

--- a/generators/app/templates/readme.md.template
+++ b/generators/app/templates/readme.md.template
@@ -29,7 +29,7 @@ $ npm start
 
 ## Credit
 
-This project was generated using [Kratos Boilerplate](https://github.com/LFeh/kratos-boilerplate).
+This project was generated using the [Kratos Boilerplate](https://github.com/LFeh/kratos-boilerplate).
 
 ## License
 
