fix to new clean-webpack-plugin version

--- a/generators/app/templates/.eslintrc.js.template
+++ b/generators/app/templates/.eslintrc.js.template
@@ -11,6 +11,7 @@ module.exports = {
   },
   extends: 'eslint:recommended',
   parserOptions: {
+    ecmaVersion: 2015,
     sourceType: 'module'
   },
   rules: {
