fix to new clean-webpack-plugin version

--- a/generators/app/templates/webpack.config.js.template
+++ b/generators/app/templates/webpack.config.js.template
@@ -1,6 +1,5 @@
+const { CleanWebpackPlugin } = require('clean-webpack-plugin');
 const BundleAnalyzerPlugin = require('webpack-bundle-analyzer').BundleAnalyzerPlugin;
-const CleanWebpackPlugin = require('clean-webpack-plugin');
-const config = require('./app.config.json');
 const CopyWebpackPlugin = require('copy-webpack-plugin');
 const HtmlWebpackPlugin = require('html-webpack-plugin');
 const ImageminPlugin = require('imagemin-webpack-plugin').default;
@@ -10,6 +9,8 @@ const path = require('path');
 const UglifyJsPlugin = require('uglifyjs-webpack-plugin');
 const webpack = require('webpack');
 const WebpackPwaManifest = require('webpack-pwa-manifest');
+
+const config = require('./app.config.json');
 
 const webapp = {
   name: config.title,
