fix error to new babel

--- a/generators/app/templates/webpack.config.js.template
+++ b/generators/app/templates/webpack.config.js.template
@@ -85,7 +85,7 @@ const baseWebpack = {
         use: {
           loader: 'babel-loader',
           options: {
-            presets: ['env']
+            presets: ['@babel/preset-env']
           }
         }
       }
