improve imports to pug and js

--- a/generators/app/templates/src/app.js.template
+++ b/generators/app/templates/src/app.js.template
@@ -1,5 +1,5 @@
 import * as offline from 'offline-plugin/runtime';
 import './app.scss';
-import './components/welcome/welcome.js';
+import './components/welcome';
 
 offline.install({ onUpdateReady: () => offline.applyUpdate() });
